--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,39 @@
+@charset 'UTF-8';
+
 $fa-font-path: "~font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome.scss';
+
+
+// 1. Configuration and helpers
+@import
+'abstracts/variables',
+'abstracts/functions',
+'abstracts/mixins';
+
+// 2. Vendors
+@import
+'vendor/normalize'; // Reset browser
+
+// 3. Stilos Base
+@import
+'base/base',
+'base/fonts',
+'base/typography',
+'base/helpers';
+
+// 4. Seccion Layout-related
+@import
+'layout/header',
+'layout/footer';
+
+// 5. Componentes
+@import
+'components/button';
+
+// 6. Landings
+@import
+'pages/home';
+
+// 7. Themes
+@import
+'themes/default';
